# walkey-talkey

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  flash.ps1  partitions.csv  ptt-f13-test.ahk  sdkconfig.defaults  testplan.Readme.md  testplan.md
.cursor/: mcp.json
config/: README.md  mode-config.json  mode-config.schema.Readme.md  mode-config.schema.json
docs/: AI_GUIDE.Readme.md  AI_GUIDE.md  DEPLOY.md  MCP_issues.md  README.md  REST_API.md  SD_mount_issues.md  TECHNICAL.md  USER_GUIDE.Readme.md  USER_GUIDE.md  WHISPER.md  autorun.inf  lvgl-gesture-reference.md  mode-system-reference.md
main/: CMakeLists.txt  README.md  action_engine.c  action_engine.h  air_mouse.c  air_mouse.h  audio_input.c  audio_input.h  audio_recorder.Readme.md  audio_recorder.c  audio_recorder.h  boot_button.c  boot_button.h  config_api_service.Readme.md  config_api_service.c  config_api_service.h  config_http_server.Readme.md  config_http_server.c  config_http_server.h  device_log.Readme.md  device_log.c  device_log.h  idf_component.yml  input_router.c  input_router.h  main.c  mode_config.c  mode_config.h  mode_controller.c  mode_controller.h  mode_hid_tokens.Readme.md  mode_hid_tokens.c  mode_hid_tokens.h  mode_json.Readme.md  mode_json_loader.c  mode_json_loader.h  mode_system.Readme.md  mode_types.h  mouse_mode.c  mouse_mode.h  (+18 more)
mcp/: README.md  index.js  package-lock.json  package.json
server/: README.md  dashboard.pen  package-lock.json  package.json  wrangler.toml
tests/: README.md  action_engine_test.c  config_api_service_test.c  input_router_test.c  mcp_test.py  (+3 more)
(+32 files in other folders)
